--- a/main/relay_gpio/html/relay.css
+++ b/main/relay_gpio/html/relay.css
@@ -39,3 +39,15 @@ input:focus + .slider { box-shadow: 0 0 1px #af4141;}
 input:checked + .slider:before { -webkit-transform: translateX(26px); -ms-transform: translateX(26px);
   transform: translateX(110px);}
 
+@-webkit-keyframes blink {
+    10% {opacity: 1;}
+    50% {opacity: 0;}
+    10% {opacity: 1;}}
+	
+#eye{
+	margin-top: 4px;
+	float: right;
+    -webkit-animation: blink 1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-play-state: paused;
+}
